--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Minted2</string>
-    <string name="title">I am Poor</string>
+    <string name="title">I am </string>
+    <string name="titleOne">Poor </string>
 </resources>
